syntax = "proto3";

package sensor;

message SensorReading {
  string sensorId = 1;
  int64 timestamp = 2;
  float temperature = 3;
  float humidity = 4;
}
